[tool.poetry]
name = "mozz-sec"
version = "0.1.0"
description = ""
authors = ["sangachy <148598435+sangachy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.5.2"
fastapi = "^0.104.1"
httpx = "^0.25.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = {extras = ["d"], version = "^23.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
